Trails CRUD implemented
CRUD for trails table implemented successfully
Fixes
- Fixed incorrect schema for tables
- removed some bad code
